--- a/style.css
+++ b/style.css
@@ -16,3 +16,12 @@ body{
     background-size: cover;
     background-position: center;
 }
+
+body::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100dvh;
+    background: rgb(0, 0, 0, 0.15);
+    backdrop-filter: blur(15px);
+}
