--- a/style.css
+++ b/style.css
@@ -3,18 +3,22 @@
 
 
 *{
-margin: 0;
+margin: 0 auto;
 padding: 0;
 box-sizing: border-box;
 font-family: "Poppins", serif;
+color:white ;
 }
 
 body{
     background: url('assets/bg.jpg');
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 body::before{
@@ -25,3 +29,15 @@ body::before{
     background: rgb(0, 0, 0, 0.15);
     backdrop-filter: blur(15px);
 }
+
+.main-container{
+    width: 300px;
+    height: 496px;
+    z-index: 1;
+    background: linear-gradient(
+        to top, rgb(0, 0, 0, 0.15),
+        rgb(255,255,255,0.15));
+    border-radius: 12px;
+    backdrop-filter: blur(100px);
+}
+
