--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ padding: 0;
 box-sizing: border-box;
 font-family: "Poppins", serif;
 color:white ;
+font-weight: 600;
 }
 
 body{
@@ -30,6 +31,12 @@ body::before{
     backdrop-filter: blur(15px);
 }
 
+/* UTILITIES */
+.regular-txt{
+    font-weight: 400;
+}
+/* END UTILITIES */
+
 .main-container{
     width: 300px;
     height: 496px;
@@ -46,6 +53,7 @@ body::before{
 
 .input-container{
     position: relative;
+    margin-bottom: 25px;
 }
 
 .city-input{
@@ -77,3 +85,23 @@ body::before{
  border: none;
  cursor: pointer;
 }
+
+/*  END INPUT COTAINER */
+
+/* SECTION: WHEATER INFO */
+.weather-info{
+    
+}
+
+.location-date-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.location{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+/*  END SECTION: WHEATER INFO */
