feat: add and styling forecast

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ body::before{
 }
 
 .location-date-container{
-    border: solid blue;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -104,7 +103,6 @@ body::before{
 }
 
 .location{
-    border: solid green;
     display: flex;
     align-items: center;
     gap: 6px;
@@ -119,5 +117,62 @@ body::before{
 .weather-summary-img{
     width: 120px;
     height: 120px;
+}
+
+.weather-summary-info{
+    text-align: end;
+}
+
+.weather-conditions-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+.condition-item{
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+
+.condition-item span{
+    font-size: 30px;
+}
+
+.forecast-item-container{
+    display: flex;
+    gap: 15px;
+    overflow: scroll;
+    padding-bottom: 12px;
+}
+
+.forecast-item-container::-webkit-scrollbar{
+    height: 8px;
+}
+
+.forecast-item-container::-webkit-scrollbar-track{
+    background: rgb(0,0,0,0.1);
+    border-radius: 99px;
+}
+.forecast-item-container::-webkit-scrollbar-thumb{
+        background: rgb(0, 0, 0, 0.15);
+        border-radius: 99px;
+}
+.forecast-item{
+    min-width: 70px;
+    background: rgb(255,255,255,0.1);
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px;
+    align-items: center;
+    border-radius: 12px;
+    transition: 0.3s background;
+}
+.forecast-item:hover{
+background: rgb(255,255,255,0.15);
+}
+.forecast-item-img{
+    widows: 35px;
+    height: 35px;
 }
 /*  END SECTION: WHEATER INFO */
